# scorify

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/scorify/: __main__.py  app.py  parsing.py  plots.py
tests/: conftest.py  test_parsing.py  test_plots.py
