[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorify"
version = "0.1.0"
description = "Cryo-ET template matching score analysis"
requires-python = ">=3.10"
authors = [{name = "Valentin Maurer", email = "valentin.maurer@embl-hamburg.de"}]
license = "GPL-2.0-only"
readme = "README.md"
dependencies = [
    "streamlit",
    "plotly",
    "starfile",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
scorify = "scorify.__main__:main"
